fixing content too wide for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ a {
 	text-decoration: none;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .header {
 	position: sticky;
 	position: -webkit-sticky;
